samples/_failures_safe/1761138846_690723_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_83d998db.c: In function ‘main’:
./samples/SAFE/__tmp_83d998db.c:146:17: error: expected expression at end of input
  146 |                 for (
      |                 ^~~
./samples/SAFE/__tmp_83d998db.c:146:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_83d998db.c:146:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_83d998db.c:146:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_83d998db.c:146:17: error: expected declaration or statement at end of input
